--- a/mobile/src/main/res/layout/activity_welcome.xml
+++ b/mobile/src/main/res/layout/activity_welcome.xml
@@ -24,7 +24,7 @@
         app:srcCompat="@drawable/app_icon" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -34,6 +34,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="GET STARTED"
+        android:onClick="startTask"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
