--- a/mobile/src/main/res/layout/activity_task.xml
+++ b/mobile/src/main/res/layout/activity_task.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.example.moamen.ubiss.TaskActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -64,4 +65,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <com.example.moamen.ubiss.CanvasView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/canvas"/>
 </android.support.constraint.ConstraintLayout>
