--- a/mobile/src/main/res/layout/activity_connect.xml
+++ b/mobile/src/main/res/layout/activity_connect.xml
@@ -10,10 +10,11 @@
         android:id="@+id/connectBtn"
         android:layout_width="150dp"
         android:layout_height="75dp"
-        android:layout_marginTop="100dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="164dp"
         android:textOff="Disconnected"
-        android:textOn="Connected"/>
+        android:textOn="Connected" />
 
     <TextView
         android:id="@+id/tvCollecting"
@@ -31,8 +32,18 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginTop="100dp"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible"/>
+        android:layout_marginTop="152dp"
+        android:visibility="invisible" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="34dp"
+        android:text="Please connect your Myo Band" />
 
 </RelativeLayout>
