--- a/mobile/src/main/res/layout/activity_connect.xml
+++ b/mobile/src/main/res/layout/activity_connect.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".Connectmyo">
 
     <ToggleButton
@@ -15,7 +16,7 @@
         android:layout_marginBottom="38dp"
         android:background="#4682B4"
         android:textColor="#FFFFFF"
-        android:textOff="Disconnected"
+        android:textOff="Connect"
         android:textOn="Connected"
         android:textSize="18dp" />
 
@@ -56,7 +57,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
-        android:textSize="20dp"
+        android:textSize="24dp"
         android:text="Please connect your Myo Band" />
 
 </RelativeLayout>
